corrindo POST do swagger e atualizando o composer
